--- a/about.html
+++ b/about.html
@@ -52,13 +52,12 @@
 
 	<section id="about">
 		<div class="grid-container py-8">
-			<div class="h7 ">O Nas:</div>
-			<p>Codethinkin specjalizuje się w projektowaniu i tworzeniu stron internetowych jak również
-				aplikacje/gry mobilne iOS/Android, aplikacje desktopowe Windows/macOS/Linux-AppImage<br>
-				W naszej pracy stawimy na połączenie efektywnych środków technologicznych z ponadczasąwą kreatywnością i
-				funkcjonalnością. Produkty cyfrowe które dostarczamy cechują się pełną responsywnością (dopasowane do
-				kazdego urządzenia) jak równiez sprawiają że usługa przez nie wyrażana staje się przyjana i łatwa w
-				odbiorze.
+			<div class="h7 ">O nas:</div>
+			<p>W Codethinkin tworzymy aplikacje oraz strony internetowe dopasowane do Twoich potrzeb.
+				W naszej pracy łączymy odpowiedni dobór technologii wraz z bezkompromisową funkcjonalnością. Nasze realizacje cechują się responsywnością produktu oraz dopasowaniem do każdego urządzenia, po to aby efekt końcowy był przyjazny i łatwy w odbiorze.
+				Oferta Codethinkin 
+				Nasza oferta zawiera aplikacje desktopowe i mobilne na IOS/Android, Windows/macOS/Linux-AppImage tworzone zgodnie z ustalonymi wytycznymi.
+				
 			</p>
 
 
@@ -67,8 +66,7 @@
 					<i class="fa-solid fa-book"></i><br>
 					<div class="uppercase">projekt koncepcyjny</div>
 					<p>
-						Tworzymy grafikę koncepcyjną oraz wstępny projekt aplikacji/strony www do akceptacji
-						przez klienta
+						Tworzymy grafikę koncepcyjną oraz wstępny projekt do akceptacji przez Klienta.
 					</p>
 				</div>
 				<div class="cell medium-3 ">
@@ -83,7 +81,7 @@
 					<i class="fa-solid fa-laptop"></i><br>
 					<div class="uppercase">prezentacja</div>
 					<p>
-						W trakcie prac na bieżąco konsultujemy postępy i ewentualne zmiany w projekcie
+						W trakcie prac na bieżąco konsultujemy postępy oraz ewentualne zmiany w projekcie.
 					</p>
 				</div>
 			</div>
