--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 	
 	<section class="sentence text-center show-for-large">
 		<div class="grid-container">
-			<p>Zapraszamy do kontaktu z nami.
+			<p>Zapraszamy do kontaktu.
 			</p>
 		</div>
 	</section>
@@ -54,7 +54,9 @@
 	<section id="about">
 		<div class="grid-container py-8 text-center">
 		
-			<p>Pozostajemy w ciągłej otwartości na nowe projekty. Z chęcią odpowiemy na pytania dotyczące realizacji Twojej wizji..</p>
+			<p>Jesteśmy otwarci na nowe wyzwania. Z chęcią odpowiemy na pytania dotyczące realizacji Twojej wizji.
+				
+			</p>
 		
 
 			<div class="grid-x grid-padding-y align-justify align-middle text-center align-center steps">
