--- a/portfolio.html
+++ b/portfolio.html
@@ -57,40 +57,41 @@
 			</div>
 
 
-				<div class="cell small-3 grid-x grid-y  text-center align-center steps">
-					<p>
-						Nasza interpretacja gry Super Mario 2d.
-					</p>
-					<input class="but1" value="click here" type="button"
-						onClick="parent.location='https://radoradoslaw.github.io/Super-Mario/Game/'">
-				</div>
+			<div class="cell small-3 grid-x grid-y  text-center align-center steps">
+				<p>
+					Interpretacja gry Super Mario 2d, w której zastosowaliśmy własną mechanikę, możliwość przejścia
+					poziomów oraz określoną ilość punktów zdrowia przeciwników.
+				</p>
+				<input class="but1" value="click here" type="button"
+					onClick="parent.location='https://radoradoslaw.github.io/Super-Mario/Game/'">
 			</div>
-			<div class="grid-x grid-padding-y  text-center align-center steps">
+		</div>
+		<div class="grid-x grid-padding-y  text-center align-center steps">
 
-				<div class="cell small-3 grid-x grid-y  text-center align-center steps ">
-					<p>
-						Projekty w pełni skalowalne i dopasowane pod każde urządzenie.
+			<div class="cell small-3 grid-x grid-y  text-center align-center steps ">
+				<p>
+					Projekt w pełni skalowalny i dostosowany do każdego urządzenia.
 
-					</p>
-					<input class="but1" value="click here" type="button"
-						onClick="parent.location='https://radoradoslaw.github.io/Super-Mario/Game/'">
+				</p>
+				<input class="but1" value="click here" type="button"
+					onClick="parent.location='https://radoradoslaw.github.io/Super-Mario/Game/'">
 
 
-				</div>
-				<div class="cell small-3 ">
-					<img src="images/2222.png">
-				</div>
 			</div>
-			<div class="grid-x grid-padding-y  text-center align-center steps">
-				<div class="cell small-3 ">
-					<img src="images/house.jpg">
-				</div>
-				<div class="cell small-3 grid-x grid-y  text-center align-center steps">
-					<p>
-						Przygotowyjemy grafiki konceocyjne dopasowane pod Twoje potrzeby
-					</p>
-				</div>
+			<div class="cell small-3 ">
+				<img src="images/2222.png">
 			</div>
+		</div>
+		<div class="grid-x grid-padding-y  text-center align-center steps">
+			<div class="cell small-3 ">
+				<img src="images/house.jpg">
+			</div>
+			<div class="cell small-3 grid-x grid-y  text-center align-center steps">
+				<p>
+					Tworzymy projekt koncepcyjny dostosowany do Twoich potrzeb.
+				</p>
+			</div>
+		</div>
 		</div>
 	</section>
 
@@ -127,4 +128,3 @@
 </body>
 
 </html>
-
