--- a/indexPL.html
+++ b/indexPL.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="css/all.min.css">
 
-	<title>Rado</title>
+	<title>RadoPl</title>
 
 	<script src="jquery.js"></script>
 </head>
@@ -22,7 +22,7 @@
 				</a>
 				<div class="text-center cell large-8 large-text-right">
 					<a href="about.html">
-						<span>About</span>
+						<span>About us</span>
 					</a>
 					<a href="portfolio.html">
 						<span>Portfolio</span>
@@ -30,8 +30,8 @@
 					<a href="contact.html">
 						<span>Contact</span>
 					</a>
-					<a href="pl.html">
-						<span>pl</span>
+					<a href="indexENG.html">
+						<span>ENG</span>
 					</a>
 				</div>
 			</div>
@@ -40,12 +40,61 @@
 
 	<section class="slide text-center">
 		<div class="logo">Code<span>Thinkin.</span></div>
-		SIMPLICITY AND AESTHETICS
+		Prosto i estetycznie 
 	</section>
 
-	Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aliquam tempora recusandae repellat officia
-	voluptate cupiditate ea maiores praesentium, nesciunt minus asperiores. Nemo expedita officiis iste, voluptates
-	dolores suscipit unde.
+	<section class="sentence text-center show-for-large">
+		<div class="grid-container">
+			Pozostajemy w ciągłej otwartości na nowe projekty. Z chęcią odpowiemy na pytania dotyczące realizacji Twojej wizji.
+		</div>
+	</section>
+
+	<section id="about">
+		<div class="grid-container py-8">
+			<div class="h7 ">O nas:</div>
+			<p>Codethinkin specjalizuje się w projektowaniu i tworzeniu  stron internetowych jak również 
+				aplikacje/gry mobilne iOS/Android, aplikacje desktopowe Windows/macOS/Linux-AppImage<br>
+				W naszej pracy stawimy na połączenie efektywnych środków technologicznych z ponadczasąwą kreatywnością i funkcjonalnością. Produkty cyfrowe które dostarczamy cechują się pełną responsywnością (dopasowane do kazdego urządzenia) jak równiez sprawiają że usługa przez nie wyrażana staje się przyjana i łatwa w odbiorze.
+			</p>
+
+
+
+			<div class="h7">Nasza praca:</div>
+			<p>Każdy projekt charakteryzuje się zindywidualizowanym podejściem do klienta. Naszym celem jest stworzenie estetycznego projektu dopasowanego do potrzeb odbiorcy.
+			</p>
+		</div>
+
+
+		<div class="grid-x gallery">
+			<div class="cell medium-6">
+				<img src="images/222.jpg"><br>
+				<div class="description">
+					Programming games at various stages of readiness and that includes advanced mechanics.
+				</div>
+			</div>
+
+			<div class="cell medium-6">
+				<img src="images/111.jpg"><br>
+				<div class="description">
+					Website design
+				</div>
+			</div>
+
+			<div class="cell medium-6">
+				<img src="images/333.jpg"><br>
+				<div class="description">
+					Web application design
+				</div>
+			</div>
+
+			<div class="cell medium-6">
+				<img src="images/444.jpg"><br>
+				<div class="description">
+					Mobile applications
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 
@@ -75,7 +124,7 @@
 
 
 
-
+<!-- 
 
 
 
@@ -94,7 +143,7 @@
 			<i class="fab fa-github"></i>
 			<i class="fab fa-tiktok"></i>
 		</div>
-	</section>
+	</section> -->
 
 
 
