--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<a href="contact.html">
 						<span>Contact</span>
 					</a>
-					<a href="eng/ENG-First-website/indexENG.html">
+					<a href="en/index.html">
 						<span>ENG</span>
 					</a>
 				</div>
